# nova-retrieve

./: .env.example  .gitignore  README.md  README.zh.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
app/api/: routes.py  schemas.py
app/core/: embeddings.py  llm.py  logging.py  vectorstore.py
app/ingest/: chunker.py  loaders.py  pipeline.py
app/retrieval/: retriever.py
data/: sp100.txt  sp200.txt  sp500.txt
data/docs/: architecture_notes.txt  company_policy.md  product_faq.md
scripts/: chat_cli.py  fetch_sec_edgar.py  ingest_docs.py
web/: app.js  index.html  styles.css
